1999-04-01  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* prompter.c (krb5_prompter_posix): Update to use new prompter
		prototype which takes an extra argument for the window
		titlebar name.  (From Frank Cusack) [krb5-kdc/662]

Thu Mar 25 18:45:48 1999  Tom Yu  <tlyu@mit.edu>

	* promptusr.c (krb5_os_get_tty_uio): getchar() returns int, not
	char.

1999-03-12  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* init_os_ctx.c (krb5_os_init_context, krb5_os_free_context):
		Sample the ccdefault name at the time when we create the
		context.  Free the ccdefault name when we free the os
		context.

	* ccdefname.c (krb5_cc_default_name, krb5_cc_set_default_name):
		Check to make sure the context is valid and return an
		error if it isn't.

1999-03-11  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* ccdefname.c (get_from_os): Add missing call to get_from_registry
		under windows.

Fri Feb 19 20:49:18 1999  Tom Yu  <tlyu@mit.edu>

	* ccdefname.c (get_from_os): Add missing close-paren; also replace
	#elif just in case.

Fri Feb  5 01:05:43 1999  Theodore Y. Ts'o  <tytso@mit.edu>

	* ccdefname.c (get_from_os): On the Windows platform,
		automatically generate the correct default cache name
		based on what krb5_cc_dfl_ops is set to.

	* realm_dom.c (krb5_get_realm_domain): Add modifiers so that this
		function can get exported in a Windows DLL.

Tue Feb  2 16:01:58 1999  Tom Yu  <tlyu@mit.edu>

	* read_pwd.c: Remove reference to CPP symbol "unix".

1999-01-29  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* ccdefname.c: Add a new function krb5_cc_set_default_name(),
		which is used set the default ccname stored in the
		krb5_context.  All of the OS-specific functions to
		determine the default ccname is moved to this function.
		The krb5_cc_default_name() function now just reads the
		default ccname from the os_context, and will call
		krb5_cc_set_default_name() to set the default ccname if
		necessary.

	* t_std_conf: Added functions to test krb5_cc_default_name and