@@ -72,13 +72,9 @@ krb5_locate_kdc(context, realm, addr_pp, naddrs, master_index, nmasters)
 
     code = profile_get_values(context->profile, realm_kdc_names, &hostlist);
 
-     if (code == PROF_NO_SECTION) {
- 	krb5_xfree(host);
-  	return KRB5_REALM_UNKNOWN;
-     } else if (code == PROF_NO_RELATION) {
- 	krb5_xfree(host);
-  	return KRB5_CONFIG_BADFORMAT;
-     } else if (code) {
+    if (code) {
+	if (code == PROF_NO_SECTION || code == PROF_NO_RELATION) {
+		    code = KRB5_REALM_UNKNOWN;
  	krb5_xfree(host);
   	return code;
      }
